--- a/posts/2015-08-23-example.markdown
+++ b/posts/2015-08-23-example.markdown
@@ -14,3 +14,18 @@ Nunc sed hendrerit orci. Nulla mollis consequat lorem ac blandit. Ut et turpis
 mauris. Nulla est odio, posuere id ullamcorper sit amet, tincidunt vel justo.
 Curabitur placerat tincidunt varius. Nulla vulputate, ipsum eu consectetur
 mollis, dui nibh aliquam neque, at ultricies leo ligula et arcu.
+
+```haskell
+staticCtx :: Context String
+staticCtx = 
+    constField "email" "egor@ccrma.stanford.com" `mappend`
+    constField "twitter" "egor_lappo" `mappend`
+    constField "github"  "egorlappo" `mappend`
+    constField "pronunciation" "Ye-gór La-poe" `mappend`
+    defaultContext
+
+postCtx :: Context String
+postCtx =
+    dateField "date" "%B %e, %Y" `mappend`
+    defaultContext
+```
