--- a/pubs.bib
+++ b/pubs.bib
@@ -56,9 +56,11 @@
     keywords = {Coalescent, External branches, Genealogies, Internal branches, Time to the most recent common ancestor},
 }
 
-@unpublished{fpm_conformity,
-    title={Conformity and anti-conformity in a finite population},
-    author={Lappo, Egor and Denton, Kaleda K and Feldman, Marcus},
-    year={2022},
-    note={Under review in \emph{Journal of Theoretical Biology}},
+@article{lappo2023conformity,
+  title={Conformity and anti-conformity in a finite population},
+  author={Lappo, Egor and Denton, Kaleda K and Feldman, Marcus W},
+  journal={Journal of Theoretical Biology},
+  pages={111429},
+  year={2023},
+  publisher={Elsevier}
 }
