--- a/pubs.bib
+++ b/pubs.bib
@@ -63,6 +63,5 @@
   pages={111429},
   volume={563},
   year={2023},
-  doi = {j.jtbi.2023.111429},
-  publisher={Elsevier}
+  doi = {10.1016/j.jtbi.2023.111429},
 }
