--- a/pubs.bib
+++ b/pubs.bib
@@ -5,16 +5,16 @@
     pages = {102265},
     year = {2021},
     issn = {0196-8858},
-    doi = {10.1016/j.aam.2021.102265},
+    doi = {https://doi.org/10.1016/j.aam.2021.102265},
     url = {https://www.sciencedirect.com/science/article/pii/S0196885821001032},
-    author = {Alimpiev, Egor and Rosenberg, Noah A},
+    author = {Egor Alimpiev and Noah Rosenberg},
     keywords = {Catalan numbers, Coalescent histories, Dyck paths, Monotonic paths, Phylogenetics},
 }
 
 @misc{2022_lattice,
   doi = {10.48550/arxiv.2111.10456},
   url = {https://arxiv.org/abs/2111.10456},
-  author = {Lappo, Egor and Rosenberg, Noah A},
+  author = {Egor Lappo and Noah Rosenberg},
   title = {A lattice structure for ancestral configurations arising from the relationship between gene trees and species trees},
   publisher = {arXiv},
   year = {2021},
@@ -24,7 +24,7 @@
 @misc{2022_concordance,
   doi = {10.48550/arxiv.2205.11001},
   url = {https://arxiv.org/abs/2205.11001},
-  author = {Lappo, Egor},
+  author = {Egor Lappo},
   keywords = {Geometric Topology (math.GT), FOS: Mathematics, FOS: Mathematics, 57M15 (Primary), 05C10, 57K10 (Secondary)},
   title = {Concordance of spatial graphs},
   publisher = {arXiv},
@@ -33,7 +33,7 @@
 
 
 @article{10.1093/g3journal/jkac205,
-    author = {Lappo, Egor and Rosenberg, Noah A},
+    author = {Egor Lappo and Noah Rosenberg},
     title = {Approximations to the expectations and variances of ratios of tree properties under the coalescent},
     journal = {G3 Genes|Genomes|Genetics},
     year = {2022},
@@ -50,18 +50,26 @@
     pages = {1-13},
     year = {2022},
     issn = {0040-5809},
-    doi = {10.1016/j.tpb.2021.09.008},
+    doi = {https://doi.org/10.1016/j.tpb.2021.09.008},
     url = {https://www.sciencedirect.com/science/article/pii/S0040580921000708},
-    author = {Alimpiev, Egor and Rosenberg, Noah A},
+    author = {Egor Alimpiev and Noah Rosenberg},
     keywords = {Coalescent, External branches, Genealogies, Internal branches, Time to the most recent common ancestor},
 }
 
 @article{lappo2023conformity,
   title={Conformity and anti-conformity in a finite population},
-  author={Lappo, Egor and Denton, Kaleda K and Feldman, Marcus W},
+  author={Egor Lappo, Kaleda Denton, and Marcus Feldman},
   journal={Journal of Theoretical Biology},
   pages={111429},
   volume={563},
   year={2023},
   doi = {10.1016/j.jtbi.2023.111429},
+}
+
+@misc{chess,
+  doi = {10.48550/ARXIV.2302.10375},  
+  author = {Egor Lappo, Noah Rosenberg, Marcus Feldman},  
+  title = {Cultural transmission of move choice in chess},
+  publisher = {arXiv},
+  year = {2023},
 }
