--- a/pubs.bib
+++ b/pubs.bib
@@ -20,18 +20,6 @@
   year = {2021},
 }
 
-
-@misc{2022_concordance,
-  doi = {10.48550/arxiv.2205.11001},
-  url = {https://arxiv.org/abs/2205.11001},
-  author = {Egor Lappo},
-  keywords = {Geometric Topology (math.GT), FOS: Mathematics, FOS: Mathematics, 57M15 (Primary), 05C10, 57K10 (Secondary)},
-  title = {Concordance of spatial graphs},
-  publisher = {arXiv},
-  year = {2022},
-}
-
-
 @article{10.1093/g3journal/jkac205,
     author = {Egor Lappo and Noah Rosenberg},
     title = {Approximations to the expectations and variances of ratios of tree properties under the coalescent},
@@ -58,7 +46,7 @@
 
 @article{lappo2023conformity,
   title={Conformity and anti-conformity in a finite population},
-  author={Egor Lappo, Kaleda Denton, and Marcus Feldman},
+  author={Egor Lappo and Kaleda Denton and Marcus Feldman},
   journal={Journal of Theoretical Biology},
   pages={111429},
   volume={563},
@@ -66,9 +54,19 @@
   doi = {10.1016/j.jtbi.2023.111429},
 }
 
+@article{lappo2023concordance, 
+  title={Concordance of spatial graphs}, 
+  doi={10.4153/S000843952300019X}, 
+  journal={Canadian Mathematical Bulletin}, 
+  publisher={Canadian Mathematical Society}, 
+  author={Lappo, Egor}, 
+  year={2023}, 
+  pages={1-18},
+}
+
 @misc{chess,
-  doi = {10.48550/arxiv.2302.10375},  
-  author = {Egor Lappo, Noah Rosenberg, Marcus Feldman},  
+  doi = {10.48550/ARXIV.2302.10375},  
+  author = {Egor Lappo and Noah Rosenberg and Marcus Feldman},  
   title = {Cultural transmission of move choice in chess},
   publisher = {arXiv},
   year = {2023},
