--- a/pubs.bib
+++ b/pubs.bib
@@ -46,7 +46,7 @@
 
 @article{lappo2023conformity,
   title={Conformity and anti-conformity in a finite population},
-  author={Egor Lappo and Kaleda Denton and Marcus Feldman},
+  author={Egor Lappo, Kaleda Denton, and Marcus Feldman},
   journal={Journal of Theoretical Biology},
   pages={111429},
   volume={563},
@@ -59,14 +59,14 @@
   doi={10.4153/S000843952300019X}, 
   journal={Canadian Mathematical Bulletin}, 
   publisher={Canadian Mathematical Society}, 
-  author={Lappo, Egor}, 
+  author={Egor Lappo}, 
   year={2023}, 
   pages={1-18},
 }
 
 @misc{chess,
   doi = {10.48550/ARXIV.2302.10375},  
-  author = {Egor Lappo and Noah Rosenberg and Marcus Feldman},  
+  author = {Egor Lappo, Noah Rosenberg, and Marcus Feldman},  
   title = {Cultural transmission of move choice in chess},
   publisher = {arXiv},
   year = {2023},
