--- a/pubs.bib
+++ b/pubs.bib
@@ -65,7 +65,7 @@
 }
 
 @misc{chess,
-  doi = {10.48550/ARXIV.2302.10375},  
+  doi = {10.48550/arxiv.2302.10375},  
   author = {Egor Lappo, Noah Rosenberg, and Marcus Feldman},  
   title = {Cultural transmission of move choice in chess},
   publisher = {arXiv},
