--- a/pubs.bib
+++ b/pubs.bib
@@ -1,73 +1,75 @@
 @article{2021_caterpillar,
-    title = {Enumeration of coalescent histories for caterpillar species trees and p-pseudocaterpillar gene trees},
-    journal = {Advances in Applied Mathematics},
-    volume = {131},
-    pages = {102265},
-    year = {2021},
-    issn = {0196-8858},
-    doi = {10.1016/j.aam.2021.102265},
-    url = {https://www.sciencedirect.com/science/article/pii/S0196885821001032},
-    author = {Egor Alimpiev and Noah Rosenberg},
-    keywords = {Catalan numbers, Coalescent histories, Dyck paths, Monotonic paths, Phylogenetics},
+  title    = {Enumeration of coalescent histories for caterpillar species trees and p-pseudocaterpillar gene trees},
+  journal  = {Advances in Applied Mathematics},
+  volume   = {131},
+  pages    = {102265},
+  year     = {2021},
+  issn     = {0196-8858},
+  doi      = {10.1016/j.aam.2021.102265},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0196885821001032},
+  author   = {Egor Alimpiev and Noah Rosenberg},
+  keywords = {Catalan numbers, Coalescent histories, Dyck paths, Monotonic paths, Phylogenetics},
 }
 
-@misc{2022_lattice,
-  doi = {10.48550/arxiv.2111.10456},
-  url = {https://arxiv.org/abs/2111.10456},
-  author = {Egor Lappo and Noah Rosenberg},
-  title = {A lattice structure for ancestral configurations arising from the relationship between gene trees and species trees},
-  publisher = {arXiv},
-  year = {2021},
+@article{2024_lattice,
+  title   = {A lattice structure for ancestral configurations arising from the relationship between gene trees and species trees},
+  journal = {Discrete Applied Mathematics},
+  volume  = {343},
+  pages   = {65-81},
+  year    = {2024},
+  doi     = {10.1016/j.dam.2023.09.033},
+  url     = {https://www.sciencedirect.com/science/article/pii/S0166218X23003748?via%3Dihub},
+  author  = {Egor Lappo and Noah Rosenberg},
 }
 
 @article{10.1093/g3journal/jkac205,
-    author = {Egor Lappo and Noah Rosenberg},
-    title = {Approximations to the expectations and variances of ratios of tree properties under the coalescent},
-    journal = {G3 Genes|Genomes|Genetics},
-    year = {2022},
-    month = {08},
-    issn = {2160-1836},
-    doi = {10.1093/g3journal/jkac205},
-    url = {https://doi.org/10.1093/g3journal/jkac205},
+  author  = {Egor Lappo and Noah Rosenberg},
+  title   = {Approximations to the expectations and variances of ratios of tree properties under the coalescent},
+  journal = {G3 Genes|Genomes|Genetics},
+  year    = {2022},
+  month   = {08},
+  issn    = {2160-1836},
+  doi     = {10.1093/g3journal/jkac205},
+  url     = {https://doi.org/10.1093/g3journal/jkac205},
 }
 
 @article{2022_compendium,
-    title = {A compendium of covariances and correlation coefficients of coalescent tree properties},
-    journal = {Theoretical Population Biology},
-    volume = {143},
-    pages = {1-13},
-    year = {2022},
-    issn = {0040-5809},
-    doi = {10.1016/j.tpb.2021.09.008},
-    url = {https://www.sciencedirect.com/science/article/pii/S0040580921000708},
-    author = {Egor Alimpiev and Noah Rosenberg},
-    keywords = {Coalescent, External branches, Genealogies, Internal branches, Time to the most recent common ancestor},
+  title    = {A compendium of covariances and correlation coefficients of coalescent tree properties},
+  journal  = {Theoretical Population Biology},
+  volume   = {143},
+  pages    = {1-13},
+  year     = {2022},
+  issn     = {0040-5809},
+  doi      = {10.1016/j.tpb.2021.09.008},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0040580921000708},
+  author   = {Egor Alimpiev and Noah Rosenberg},
+  keywords = {Coalescent, External branches, Genealogies, Internal branches, Time to the most recent common ancestor},
 }
 
 @article{lappo2023conformity,
-  title={Conformity and anti-conformity in a finite population},
-  author={Egor Lappo, Kaleda Denton, and Marcus Feldman},
-  journal={Journal of Theoretical Biology},
-  pages={111429},
-  volume={563},
-  year={2023},
-  doi = {10.1016/j.jtbi.2023.111429},
+  title   = {Conformity and anti-conformity in a finite population},
+  author  = {Egor Lappo, Kaleda Denton, and Marcus Feldman},
+  journal = {Journal of Theoretical Biology},
+  pages   = {111429},
+  volume  = {563},
+  year    = {2023},
+  doi     = {10.1016/j.jtbi.2023.111429},
 }
 
-@article{lappo2023concordance, 
-  title={Concordance of spatial graphs}, 
-  doi={10.4153/S000843952300019X}, 
-  journal={Canadian Mathematical Bulletin}, 
-  publisher={Canadian Mathematical Society}, 
-  author={Egor Lappo}, 
-  year={2023}, 
-  pages={1-18},
+@article{lappo2023concordance,
+  title     = {Concordance of spatial graphs},
+  doi       = {10.4153/S000843952300019X},
+  journal   = {Canadian Mathematical Bulletin},
+  publisher = {Canadian Mathematical Society},
+  author    = {Egor Lappo},
+  year      = {2023},
+  pages     = {1-18},
 }
 
 @misc{chess,
-  doi = {10.48550/arxiv.2302.10375},  
-  author = {Egor Lappo, Noah Rosenberg, and Marcus Feldman},  
-  title = {Cultural transmission of move choice in chess},
+  doi       = {10.48550/arxiv.2302.10375},
+  author    = {Egor Lappo, Noah Rosenberg, and Marcus Feldman},
+  title     = {Cultural transmission of move choice in chess},
   publisher = {arXiv},
-  year = {2023},
+  year      = {2023},
 }
