more bib updates

--- a/pubs.bib
+++ b/pubs.bib
@@ -22,7 +22,7 @@
   author  = {Egor Lappo and Noah Rosenberg},
 }
 
-@article{10.1093/g3journal/jkac205,
+@article{2022_approximations,
   author  = {Egor Lappo and Noah Rosenberg},
   title   = {Approximations to the expectations and variances of ratios of tree properties under the coalescent},
   journal = {G3 Genes|Genomes|Genetics},
@@ -46,7 +46,7 @@
   keywords = {Coalescent, External branches, Genealogies, Internal branches, Time to the most recent common ancestor},
 }
 
-@article{lappo2023conformity,
+@article{2023_conformity,
   title   = {Conformity and anti-conformity in a finite population},
   author  = {Egor Lappo, Kaleda Denton, and Marcus Feldman},
   journal = {Journal of Theoretical Biology},
@@ -56,14 +56,16 @@
   doi     = {10.1016/j.jtbi.2023.111429},
 }
 
-@article{lappo2023concordance,
+@article{2023_concordance,
   title     = {Concordance of spatial graphs},
   doi       = {10.4153/S000843952300019X},
   journal   = {Canadian Mathematical Bulletin},
   publisher = {Canadian Mathematical Society},
   author    = {Egor Lappo},
   year      = {2023},
-  pages     = {1-18},
+  pages     = {1091-1108},
+  volume    = {66},
+  issue     = {4},
 }
 
 @misc{chess,
