--- a/pubs.bib
+++ b/pubs.bib
@@ -68,10 +68,12 @@
   issue     = {4},
 }
 
-@misc{chess,
-  doi       = {10.48550/arxiv.2302.10375},
-  author    = {Egor Lappo, Noah Rosenberg, and Marcus Feldman},
-  title     = {Cultural transmission of move choice in chess},
-  publisher = {arXiv},
-  year      = {2023},
+@article{2023_chess,
+  doi     = {10.1098/rspb.2023.1634},
+  author  = {Egor Lappo, Noah Rosenberg, and Marcus Feldman},
+  title   = {Cultural transmission of move choice in chess},
+  journal = {Proc. R. Soc. B},
+  volume  = {290},
+  pages   = {20231634},
+  year    = {2023},
 }
