--- a/pubs.bib
+++ b/pubs.bib
@@ -76,3 +76,13 @@
   pages   = {20231634},
   year    = {2023},
 }
+
+@article{2024_arizona,
+  doi     = {10.1016/j.isci.2024.108831},
+  author  = {Egor Lappo, Noah Rosenberg},
+  title   = {Solving the Arizona search problem by imputation},
+  journal = {iScience},
+  volume  = {108831},
+  year    = {2024},
+}
+
