--- a/pubs.bib
+++ b/pubs.bib
@@ -86,3 +86,12 @@
   year    = {2024},
 }
 
+@article{2024_nature,
+  doi     = {https://www.nature.com/articles/s41586-024-07834-x},
+  author  = {M. C. Bitter, ..., Egor Lappo, P. Schmidt & D. A. Petrov},
+  title   = {Continuously fluctuating selection reveals fine granularity of adaptation},
+  journal = {Nature},
+  year    = {2024},
+  volume  = {634},
+  pages   = {389-396},
+}
